# mlx-expm

./: .gitignore  CHANGELOG.md  README.md  benchmark.py  benchmark_results.md  pyproject.toml
mlx_expm/: __init__.py  matrix_functions.py
tests/: test_matrix_functions.py
