[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-expm"
version = "0.1.0"
description = "GPU-accelerated matrix exponential and related functions for Apple MLX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sheng-Kai Huang", email = "akai@fawstudio.com"},
]
keywords = ["mlx", "matrix-exponential", "gpu", "linear-algebra", "quantum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "mlx>=0.5.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scipy>=1.10",
]
benchmark = [
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/akaiHuang/mlx-expm"
Repository = "https://github.com/akaiHuang/mlx-expm"

[tool.setuptools.packages.find]
include = ["mlx_expm*"]
